load("@google_bazel_common//tools/javadoc:javadoc.bzl", "javadoc_library")

android_library(
    name = "sntp",
    srcs = glob([
        "*.java",
        "impl/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//java/com/google/time/client/base",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

javadoc_library(
    name = "sntp.javadocs",
    srcs = glob(["*.java"]),
    # TODO Fix Android API level
    android_api_level = 31,
    deps = [":sntp"],
)
